Support pre-normalization for FT Encoder fp32 (#974)
* add encoder op

* support fp16

* support pre-normalization for FT Encoder fp32

* update CMakelists.txt

* move code to cuda_kernel_h and cuda_kernel_cu

* uncomment FT sample

* add jiaqi code

* self-attn output diff

* finish pre-normalization v1

* implement generalized kernel

* add v1 encoder

* delete assert for generalize version kernel

* support post-normalization fp32 for FT Encoder

* delete unused CMake commands

Co-authored-by: LiuChiaChi <709153940@qq.com>
Co-authored-by: LiuChiachi <70913940@qq.com>
Co-authored-by: Jiaqi Liu <liujiaqi06@baidu.com>

--- a/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
+++ b/paddlenlp/ops/patches/FasterTransformer/CMakeLists.txt
@@ -223,4 +223,4 @@ link_directories(
 
 add_subdirectory(fastertransformer)
 add_subdirectory(tools)
-add_subdirectory(sample)
+#add_subdirectory(sample)
