[FT Decoder] Add JIT and bug fix  (#1173)
* fix&feat: gelu-->relu and add jit

* docs: update yaml

--- a/paddlenlp/ops/CMakeLists.txt
+++ b/paddlenlp/ops/CMakeLists.txt
@@ -55,7 +55,7 @@ if(WITH_ENCODER AND NOT ON_INFER)
 endif()
 
 if(WITH_DECODER)
-  list(APPEND decoder_op_files fusion_decoder_op.cc fusion_decoder_op.cu)
+  list(APPEND decoding_op_files fusion_decoder_op.cc fusion_decoder_op.cu)
 endif()
 
 if(WITH_BART)
