--- a/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
+++ b/paddlenlp/ops/faster_transformer/src/CMakeLists.txt
@@ -145,7 +145,7 @@ if(ON_INFER)
     set(DEPS ${DEPS} shlwapi.lib)
   endif(NOT WIN32)
 
-  cuda_add_library(decoding_infer_op ${decoding_op_files} ${decoder_op_files} SHARED)
+  cuda_add_library(decoding_infer_op ${decoding_op_files} SHARED)
   add_dependencies(decoding_infer_op extern_${THIRD_PARTY_NAME} boost)
 
   string(REPLACE "/" ";" DEMO_PATH ${DEMO})
@@ -271,8 +271,4 @@ else(ON_INFER)
   add_library(decoding_op SHARED ${decoding_op_files})
   add_dependencies(decoding_op extern_${THIRD_PARTY_NAME} boost)
   target_link_libraries(decoding_op PRIVATE -lcublas -lcudart ${lib_link} ${ft_lib_link} -lencoder)
-
-  add_library(decoder_op SHARED ${decoder_op_files})
-  add_dependencies(decoder_op extern_${THIRD_PARTY_NAME} boost)
-  target_link_libraries(decoder_op PRIVATE -lcublas -lcudart -ldecoder ${lib_link})
 endif()
